# FastIntercomMCP

./: .coveragerc  CLAUDE.md  ENHANCED_LOGGING_SUMMARY.md  comprehensive_sync_test.py  full_workspace_sync_test.py  local_ci_mirror_test.py  monitor_sync_progress.py  performance_test.py  pyproject.toml  quick_performance_test.py  requirements.txt  test_feature_compatibility.py  test_performance_benchmarks.py
.github/workflows/: ci.yml  integration-check.yml
.test-workspace-20250701-153739-e12878/data/: config.json  data.db
.test-workspace-20250701-153739-e12878/logs/: init_output.txt  sync_output.txt
docs/: TESTING.md
fast_intercom_mcp/: __init__.py  background_sync.py  cli.py  database.py  intercom_client.py  mcp_server.py  models.py  sync_service.py
fast_intercom_mcp/core/: config.py  logging.py  progress.py  status_tracker.py
fast_intercom_mcp/sync/: detection.py  incremental.py  service.py  state.py  strategies.py  tracking.py
fast_intercom_mcp/transport/: __init__.py  optimization.py  rate_limiter.py
scripts/: README.md  TESTING_ORGANIZATION.md  content_verification.py  docker_test_runner.sh  enhanced_integration_test.sh  pre_commit_validation.sh  run_integration_test.sh  test_mcp_server.py  test_mcp_server_simple.py  test_mcp_tools.py
tests/: conftest.py  test_basic_functionality.py  test_database.py  test_mcp_protocol.py  test_mcp_server.py  test_server_health.py  test_sync_service.py  test_sync_verification.py
tests/integration/: test_e2e_comprehensive.py  test_feature_compatibility.py  test_performance_benchmarks.py
tests/unit/: test_cli.py  (+4 more)
