[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-intercom-mcp"
version = "0.3.0"
description = "High-performance MCP server for Intercom conversation analytics"
authors = [{name = "evolsb", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0", 
    "click>=8.0.0",
    "python-dotenv>=0.19.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/evolsb/FastIntercomMCP"
Repository = "https://github.com/evolsb/FastIntercomMCP"

[project.scripts]
fast-intercom-mcp = "fast_intercom_mcp.cli:cli"